--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
     "programs/*"
-, "rocket-mongo-example"]
+, "rocket-mongodb-backend"]
 resolver = "2"
 
 [profile.release]
